feat: add and fix crud todo lists
