# docs/swagger.yaml
@@ -88,6 +88,8 @@ definitions:
         type: integer
       title:
         type: string
+      updated_at:
+        type: string
     type: object
   entity.WalletReq:
     properties:
@@ -98,15 +100,6 @@ definitions:
     required:
     - balance
     - user_name
-    type: object
-  entity.WalletResponse:
-    properties:
-      balance:
-        type: integer
-      id:
-        type: integer
-      user_name:
-        type: string
     type: object
 info:
   contact:
@@ -415,196 +408,6 @@ paths:
       summary: Get Todo List by ID
       tags:
       - Todo List
-  /v1/api/wallet:
-    get:
-      consumes:
-      - application/json
-      description: Get Wallets by User ID
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Success
-          schema:
-            allOf:
-            - $ref: '#/definitions/entity.GeneralResponse'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/entity.WalletResponse'
-                  type: array
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "422":
-          description: Invalid Request Body
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "500":
-          description: Internal server Error
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-      security:
-      - Bearer: []
-      summary: Get Wallets by User ID
-      tags:
-      - Wallet
-    post:
-      consumes:
-      - application/json
-      description: Create New Wallet
-      parameters:
-      - description: Payload Request Body
-        in: body
-        name: req
-        required: true
-        schema:
-          $ref: '#/definitions/entity.WalletReq'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Success
-          schema:
-            allOf:
-            - $ref: '#/definitions/entity.GeneralResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/entity.WalletReq'
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "422":
-          description: Invalid Request Body
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "500":
-          description: Internal server Error
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-      security:
-      - Bearer: []
-      summary: Create New Wallet
-      tags:
-      - Wallet
-    put:
-      consumes:
-      - application/json
-      description: Update existing Wallet
-      parameters:
-      - description: id of wallet
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Payload Request Body
-        in: body
-        name: req
-        required: true
-        schema:
-          $ref: '#/definitions/entity.WalletReq'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Success
-          schema:
-            $ref: '#/definitions/entity.GeneralResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "422":
-          description: Invalid Request Body
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "500":
-          description: Internal server Error
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-      security:
-      - Bearer: []
-      summary: Update existing Wallet by ID
-      tags:
-      - Wallet
-  /v1/api/wallet/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete existing Wallet
-      parameters:
-      - description: id of wallet
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Success
-          schema:
-            $ref: '#/definitions/entity.GeneralResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "422":
-          description: Invalid Request Body
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "500":
-          description: Internal server Error
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-      security:
-      - Bearer: []
-      summary: Delete existing Wallet by ID
-      tags:
-      - Wallet
-    get:
-      consumes:
-      - application/json
-      description: Get Wallet by ID
-      parameters:
-      - description: id of wallet
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Success
-          schema:
-            allOf:
-            - $ref: '#/definitions/entity.GeneralResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/entity.WalletResponse'
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "422":
-          description: Invalid Request Body
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-        "500":
-          description: Internal server Error
-          schema:
-            $ref: '#/definitions/entity.CustomErrorResponse'
-      security:
-      - Bearer: []
-      summary: Get Wallet by ID
-      tags:
-      - Wallet
 securityDefinitions:
   Bearer:
     in: header
