# entity/todo_list.go
@@ -16,6 +16,7 @@ type TodoListResponse struct {
 	Description string    `json:"description"`
 	DoingAt     string    `json:"doing_at"`
 	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 }
 
 func (r *TodoListReq) SetID(ID int64) {
